--- a/content/post/2017-07-27-new-test-markdown.Rmd
+++ b/content/post/2017-07-27-new-test-markdown.Rmd
@@ -8,6 +8,7 @@ categories:
 tags:
   - R Markdown
   - plot
+summary: "Enable/disable and configure widgets to customize your homepage"
 ---
 
 #New site
