--- a/public/post/2017-08-12-install-r-package-from-github-through-proxy.Rmd
+++ b/public/post/2017-08-12-install-r-package-from-github-through-proxy.Rmd
@@ -18,7 +18,7 @@ In many organization, especially financial organization like banking industry, s
 
 In this method, the only thing that you need to change is the Github repository of the R package needed to be installed.
 
-For example, if you want to install package `easyRFM` from Github with the following link: `github.com/hoxo-m/easyRFM`, you can easily install wih the following codes:
+For example, if you want to install package `easyRFM` from Github with the following link: `github.com/hoxo-m/easyRFM`, you can easily install with the following codes:
 
 ```{r, eval = F}
 #Step 1: Install downloader from CRAN
@@ -58,4 +58,4 @@ install_github("rstats-db/odbc")
 reset_config()
 ```
 
-Two methods above help me alot to install R packages, specially from Github. Hope that it will help you also to make your life easier to use R in your life of data scientists.
+Two methods above help me a lot to install R packages, specially from Github. Hope that it will help you also to make your life easier!
