--- a/content/post/2018-05-09-create-waterfall-chart-with-ggplot2.Rmd
+++ b/content/post/2018-05-09-create-waterfall-chart-with-ggplot2.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(warning = F, message = F)
 
 In digital world, active users is very important metrics but is quite hard to descrile performance of a website/service overtime. Typically, the formula of active user at given time *t* can be describle as follows:
 
-$$active_{t} = active_{t-1} = new_{t} - churn_{t}$$
+$$active_{t} = active_{t-1} + new_{t} - churn_{t}$$
 
 Naturally, waterfall chart comes to my mind as an candidate to vizualize performance of active users overtime. So, I tried to look for some real case study using waterfall chart for this very problem using R but I was stuck. However, after coules of hours looking through various sources, I found a really impressive use case of using Tableau to vizualize subscribe churn activity as follows.
 
