--- a/content/post/2017-08-10-how-to-manage-library-in-r-efficiently.Rmd
+++ b/content/post/2017-08-10-how-to-manage-library-in-r-efficiently.Rmd
@@ -32,7 +32,12 @@ You will see that I have 2 paths, one is my `D:/Rlibrary` - just ignore it & the
 - Go to folder `base\R`
 - Copy file `Rprofile` to desktop
 - Open `Rprofile` with text editor
-- Add the following code in the end `r .libPaths("D:/Rlibrary")`
+- Add the following code in the end 
+
+```{r, eval = F}
+.libPaths("D:/Rlibrary")`
+```
+
 - Copy `Rprofile` back to `C:/Program Files/R/R-3.3.0/library/base/R`
 
 Restart R studio and when typing `.libPaths()`, you will see your default library changed to `D:/Rlibrary`
