--- a/content/blog/2017-08-10-how-to-manage-library-in-r-efficiently.Rmd
+++ b/content/blog/2017-08-10-how-to-manage-library-in-r-efficiently.Rmd
@@ -6,7 +6,7 @@ slug: how-to-manage-libraries-in-r-efficiently
 categories:
   - R
 tags: ["R", "Microsoft R", "SQLRServer"]
-summary: "In this post, I will share with you the way that I manage my R library, no worries when updating your R or even R Services in SQLRServer"
+summary: "The easiest way to manage your R library efficiently without worrying when updating your R version"
 ---
 
 When starting using with R, installing and managing R libraries seems not to be a difficult task at all. However, when updating R to new version, it will make some problems. For most cases, you have to re-install your library, which takes much time. 
