--- a/public/blog/2017-08-12-install-r-package-from-github-through-proxy.Rmd
+++ b/public/blog/2017-08-12-install-r-package-from-github-through-proxy.Rmd
@@ -7,7 +7,7 @@ categories:
   - R
 tags:
   - Tips in R
-summary: "Guide to install R packages from Github through proxy"
+summary: "Guide to install R packages from Github through proxy - some useful trick for R users"
 ---
 
 The easiest way to install an R package is from R-Cran. However, as the number of R users is growing up very fast, many developers are contribute to R community through Github. And the standard way to install from Github is to use `devtools` package with `install_github()` command.
