--- a/public/blog/2018-05-09-create-waterfall-chart-with-ggplot2.Rmd
+++ b/public/blog/2018-05-09-create-waterfall-chart-with-ggplot2.Rmd
@@ -8,7 +8,7 @@ categories:
   - Vizualization
 tags: 
   - Vizualization
-summary: "Create beautifual waterfall chart with GGPLOT2"
+summary: "Tutorial to create a beautifual waterfall chart with GGPLOT2"
 output: 
   html_document: 
     df_print: kable
