--- a/public/blog/2018-07-06-review-gghighlight.Rmd
+++ b/public/blog/2018-07-06-review-gghighlight.Rmd
@@ -7,7 +7,8 @@ categories:
   - R
 tags:
   - Vizualization
-summary: "Review gghighlight package"
+summary: "Review gghighlight package - a great package to highlight ggplot objects with some tricks to highlight geom_point, geom_text & geom_bar."
+banner: "/img/gghighlight.png"
 ---
 
 ```{r setup, include=FALSE}
