--- a/content/blog/2018-07-06-review-gghighlight.Rmd
+++ b/content/blog/2018-07-06-review-gghighlight.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Review gghighlight
+title: Review gghighlight - a great package to highlight ggplot charts
 author: Anh Hoang Duc
 date: '2018-07-06'
 slug: review-gghighlight
@@ -7,7 +7,7 @@ categories:
   - R
 tags:
   - Vizualization
-summary: "Review gghighlight package - a great package to highlight ggplot objects with some tricks to highlight geom_point, geom_text & geom_bar."
+summary: "Review gghighlight package - a great package to highlight ggplot objects with some tricks to highlight `geom_point`, `geom_text` & `geom_bar`."
 ---
 
 ```{r setup, include=FALSE}
