--- a/public/blog/2018-07-06-review-gghighlight.Rmd
+++ b/public/blog/2018-07-06-review-gghighlight.Rmd
@@ -8,6 +8,9 @@ categories:
 tags:
   - Vizualization
 summary: "Review gghighlight package - a great package to highlight ggplot objects with some tricks to highlight `geom_point`, `geom_text` & `geom_bar`."
+header:
+  featuredImage: "headers/bubbles-wide.jpg"
+  image: "headers/bubbles-wide.jpg"
 ---
 
 ```{r setup, include=FALSE}
