--- a/public/blog/2018-05-09-create-waterfall-chart-with-ggplot2.Rmd
+++ b/public/blog/2018-05-09-create-waterfall-chart-with-ggplot2.Rmd
@@ -9,8 +9,8 @@ categories:
 tags: 
   - Vizualization
 summary: "Tutorial to create a beautifual waterfall chart with GGPLOT2"
-header:
-  image: "headers/water-fall.png"
+# header:
+#   image: "headers/water-fall.png"
 ---
 
 ```{r setup, include = F}
