--- a/static/ca-nhan/check-list.Rmd
+++ b/static/ca-nhan/check-list.Rmd
@@ -4,9 +4,10 @@ output:
   html_document: 
     toc: yes
     highlight: haddock
-    theme: readable
+    theme: flatly
     number_sections: yes
-    toc_float: true
+    toc_float: yes
+    css: style.css
 ---
 
 ```{r setup, include=FALSE}
@@ -60,8 +61,11 @@ knitr::opts_chunk$set(echo = TRUE)
 <input type="checkbox"> Ví<br>
 <input type="checkbox"> Vé máy bay <br>
 <input type="checkbox"> Giấy tờ book khách sạn<br>
+<input type="checkbox"> Điện thoại<br>
 <input type="checkbox"> Sạc điện thoại<br>
 <input type="checkbox"> Sim 3G<br>
+<input type="checkbox"> Lap-top/sạc lap-top<br>
+<input type="checkbox"> Bút trình chiếu slide<br>
 
 ---
 
