--- a/static/ca-nhan/check-list.Rmd
+++ b/static/ca-nhan/check-list.Rmd
@@ -14,11 +14,12 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Đồ của Dưa
+# Đồ du lịch của Dưa
 
 <input type="checkbox"> Ba lô<br>
 <input type="checkbox"> Va li<br>
 <input type="checkbox"> Địu<br>
+<input type="checkbox"> Ô che mưa<br>
 
 ---
 
@@ -26,8 +27,12 @@ knitr::opts_chunk$set(echo = TRUE)
 <input type="checkbox"> 10  khăn lau mặt<br>
 <input type="checkbox"> 5 khăn lau đít<br>
 <input type="checkbox"> 5 bộ quần áo/ngày<br>
+<input type="checkbox"> Khăn tam giác/khăn quàng cổ<br>
+<input type="checkbox"> 3 yếm dãi/ngày<br>
+<input type="checkbox"> 5 bộ quần áo/ngày<br>
+<input type="checkbox"> 2 đôi tất/ngày<br>
+<input type="checkbox"> Giày/Dép<br>
 <input type="checkbox"> Mũ che nắng<br>
-<input type="checkbox"> Ô che mưa<br>
 <input type="checkbox"> Khăn giấy: 20 cái/ngày<br>
 <input type="checkbox"> Bỉm: 5 cái/ngày<br>
 <input type="checkbox"> Tấm lót chống thấm<br>
@@ -46,12 +51,19 @@ knitr::opts_chunk$set(echo = TRUE)
 <input type="checkbox"> Thuốc bôi ngứa ngoài da<br>
 <input type="checkbox"> Cặp nhiệt độ<br>
 <input type="checkbox"> Thuốc dị ứng<br>
+<input type="checkbox"> Thuốc cảm<br>
 
-# Đồ của Đức Anh
+---
+
+<input type="checkbox"> Dnee giặt <br>
+<input type="checkbox"> sữa tám/dầu gội đầu<br>
+
+# Đồ du lịch của bố mẹ
 
 <input type="checkbox"> Vali con/ba lô<br>
 <input type="checkbox"> Vali to <br>
 <input type="checkbox"> Túi chéo vai/ba-lô vải<br>
+<input type="checkbox"> Gối ngủ trên máy bay<br>
 
 ---
 
@@ -77,6 +89,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ---
 
 <input type="checkbox"> Quần áo 1 bộ/ngày <br>
+<input type="checkbox"> Áo khoác mỏng mặc trên máy bay<br>
 <input type="checkbox"> Tất 1 đôi/ngày <br>
 <input type="checkbox"> Giày đi bộ <br>
 <input type="checkbox"> Dép <br>
