--- a/public/ds-book-python/.doctrees/nbsphinx/p01-02-gioi-thieu-co-ban-python.ipynb
+++ b/public/ds-book-python/.doctrees/nbsphinx/p01-02-gioi-thieu-co-ban-python.ipynb
@@ -5932,7 +5932,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.15"
-  }
+  },
+  "toc-autonumbering": true,
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 4
