--- a/public/ds-book-python/.doctrees/nbsphinx/p01-01-gioi-thieu-python.ipynb
+++ b/public/ds-book-python/.doctrees/nbsphinx/p01-01-gioi-thieu-python.ipynb
@@ -24,10 +24,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::warning\n",
     "**Lưu ý**: Đối với các bạn sử dụng Python từ các ngôn ngữ lập trình thống kê khác như R hoặc Stata, sẽ có 1 chút khó khăn trong giai đoạn mới sử dụng ở 2 điểm\n",
     "\n",
     "- Python cài đặt và sử dụng thư viện chủ yếu trên `terminal` hoặc `cmd`, khiến cho việc cài đặt và quản lý package có chút khó khăn\n",
-    "- Các đối tượng trong Python có `methods` đi kèm - đây là điều khó hiểu với những người sử dụng các ngôn ngữ phân tích khác, do chủ yếu chỉ có hàm (`function`) mà không có `method`\n",
+    "- Các đối tượng trong Python có `methods` đi kèm - đây là điều hơi khó hiểu với những người sử dụng các ngôn ngữ phân tích khác - đặc biệt từ R, do chủ yếu chỉ có hàm (`function`) mà không có `method`\n",
     "\n",
     "Nội dung giải thích về `method` sẽ được nói kỹ hơn trong các phần tiếp theo"
    ]
@@ -314,7 +315,7 @@
    "source": [
     "### Cách xuống dòng\n",
     "\n",
-    "Ta có thể xuống dòng với dấu `\\` và không có dấu cách đằng sau"
+    "Ta có thể xuống dòng với dấu `\\` và **không có dấu cách** đằng sau"
    ]
   },
   {
@@ -536,22 +537,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# hoặc\n",
-      "import os\n",
-      "cwd = os.getcwd()\n",
-      "print(cwd)\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mIn\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
    "source": [
-    "#| eval: false\n",
     "print(In[8])"
    ]
   },
@@ -602,7 +603,6 @@
     }
    ],
    "source": [
-    "#| eval: false\n",
     "%time sum(range(100))"
    ]
   },
