--- a/public/ds-book-python/.doctrees/nbsphinx/p01-99-tricks-python.ipynb
+++ b/public/ds-book-python/.doctrees/nbsphinx/p01-99-tricks-python.ipynb
@@ -1264,7 +1264,8 @@
     "os.chdir(\"../_book\")\n",
     "for file in glob.glob(\"*.md\"):\n",
     "    replace_md(file = file, find = '<img src=\"', replace = '![](')\n",
-    "    replace_md(file = file, find = '\" width=\"672\" />', replace = ')\\n\\n')"
+    "    replace_md(file = file, find = '\" width=\"672\" />', replace = ')\\n\\n')\n",
+    "```"
    ]
   },
   {
@@ -1279,7 +1280,8 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "python script.py"
+    "python script.py\n",
+    "```"
    ]
   },
   {
